# KeBan

./: .env.example  .gitignore  GLM5.2.md  LICENSE  README.md  deepseek.md
.github/workflows/: deploy-server.yml  deploy-website.yml  pr-check.yml  release.yml
client/: .env.example  .gitignore  components.json  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
client/electron/: aiHandlers.ts  audioCapture.ts  captureHandlers.ts  ipcUtils.ts  logger.ts  main.ts  mcpBridge.ts  mcpManager.ts  preload.ts  screenCapture.ts  trayManager.ts  tsconfig.json  updater.ts  videoRecorder.ts  windowManager.ts
client/src/: App.tsx  env.d.ts  index.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: ai_gateway.rs  main.rs
docs/: 分阶段交付路线图.md  被拒绝的替代方案.md  贯穿全周期管理活动.md
docs/phase0/: 01-项目立项书.md  02-技术可行性评估报告.md  03-技术风险登记册.md  04-团队角色与职责矩阵RACI.md  05-项目章程.md  06-变更管理流程.md  07-团队通讯录.md  08-沟通机制文档.md  09-协作工具链配置清单.md
docs/phase1/: 01-用户故事地图.md  02-产品需求文档PRD.md  03-MoSCoW优先级矩阵.md  04-双模式需求规格.md  05-需求规格说明书SRS.md  06-技术复杂度评估.md  07-竞品分析报告框架.md  08-需求调研报告.md  09-业务流程图.md  10-需求变更管理流程.md
docs/phase2/: 01-里程碑计划.md  03-技术预研规划.md  (+11 more)
scripts/: generate_source_code_doc.ps1  test_connectivity.ps1  test_summarize.ps1
server/: .dockerignore  .env.example  .gitignore  deploy.sh  docker-compose.prod.yml  docker-compose.yml
website/: package-lock.json  package.json
(+536 files in other folders)
